--- a/styles.css
+++ b/styles.css
@@ -108,6 +108,7 @@ h3 {
 }
 h4 {
   font-size: 0.875rem;
+  line-height: 1.5;
 }
 p {
   margin-bottom: 1.25rem;
@@ -123,9 +124,7 @@ p {
   h3 {
     font-size: 1.75rem;
   }
-  h4 {
-    font-size: 1rem;
-  }
+
   body {
     font-size: 1rem;
   }
@@ -134,6 +133,10 @@ p {
   h3,
   h4 {
     line-height: 1;
+  }
+
+  h4 {
+    font-size: 1rem;
   }
 }
 /*  global classes */
